feat: separation of user controller methods by authority